# c-language-programming

./: .gitignore  CMakeLists.txt  Makefile  README.MD  README.md  main  run
AdvanceControlFlow/: setlongjmp.c
AdvanceDataType/: main.c
AdvanceFunctionalConcepts/: variadic_functions.c
AdvancePointers/: advpointers.c  functionpointers.c
BitManipulation/: main.c  variable.c
DynamicMemoryAllocation/: DMA.c
FileIO/: ResultFile.txt  daydate.txt  file  file.c  fileExercise.c  fputDemo.c  fscanfDemo.c  positioningDemo.c  textfile.txt
Macro/: macro.c
Pointers/: MorePointers.c  Pointers.c
Practice/: display.c  listnode.c  listnode.h  main.c  other.c  other.h
Strings/: String.c
Structure/: exercise.c  structures  structures.c
TicTacToe/: tictactoe.c
Union/: unions.c
firstProject/: Main.c
